2007-07-26  Frederic Crozat  <fcrozat@mandriva.com>

	* freedesktop.org.xml.in: Add video/avi as alias for video/x-msvideo,
	some Windows mail clients still use it, #11729.

2007-07-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add the application/x-nintendo-ds-rom
	mime-type for Nintendo DS ROMs

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* Makefile.am: Install shared-mime-info.pc to $datadir/pkgconfig
	instead of $libdir/pkgconfig, #10698 (revert).

2007-07-22  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add the iRiver PLA playlist format,
	patch from Jonathan Matthew <jonathan@kaolin.wh9.net>
	(Closes: #11604)

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* update-mime-database.c: Use g_warning instead of g_error. Fixes
	#10959. Thanks to Sebastien Bacher <seb128@debian.org>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add JAD MIME type. Fixes #10869.
	Thanks to Ville Skyttä <ville.skytta@iki.fi>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add WMLScript MIME type. Fixes #10868.
	Thanks to Ville Skyttä <ville.skytta@iki.fi>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add winmail.dat glob to TNEF MIME type. Fixes
	#10867. Thanks to Ville Skyttä <ville.skytta@iki.fi>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Fix PostScript and XHTML acronyms. Fixes
	#10865. Thanks to Ville Skyttä <ville.skytta@iki.fi>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* configure.in: Require glib 2.3.2. Fixes #10398. Thanks to Martin
	Koller <m.koller@surfeu.at>, and Harri Porten <porten@kde.org>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* update-mime-database.c: Improve windows compatibility, close streams.
	Fixes #10689. Thanks to Christian Ehrlicher <ch.ehrlicher@gmx.de>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>
