@@ -1,3 +1,8 @@
+2007-07-27  Frederic Crozat  <fcrozat@mandriva.com>
+
+	* freedesktop.org.xml.in: Add audio/ogg, video/ogg as subclasses of
+	application/ogg and add relevant extensions.
+
 2007-07-26  Frederic Crozat  <fcrozat@mandriva.com>
 
 	* freedesktop.org.xml.in: Add video/avi as alias for video/x-msvideo,
